# hermes-max-channel

./: .env.example  .gitignore  CHANGELOG.md  README.md  adapter.py  plugin.yaml  pyproject.toml  test_hermes_integration.py  test_manual.py
data/: inbox_processed.json  processed.json
deploy/: Dockerfile  nginx.conf  requirements.txt  systemd.service
src/: __init__.py  bot.py  client.py  file_utils.py  hermes_worker.py  main.py  models.py
